# varint

./: CMakeLists.txt  main.c
src/: defines.h  heap.c  heap.h  malloc.c  malloc.h  varint.c  varint.h
